# SkolX

./: README.md  about.html  glosPopup.html  index.html  package-lock.json  package.json  vite.config.ts
src/: About.css  About.tsx  App.css  App.tsx  Glosor.css  Glosor.tsx  Home.css  Home.tsx  aboutMain.tsx  glosPopup.css  glosPopup.tsx  glosPopupMain.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: add_to_start.ps1  load_path.ps1
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
